<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/core"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_profile.ProfileActivity">

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="408dp"
        android:layout_height="276dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="372dp"
        android:layout_height="43dp"
        android:layout_marginTop="212dp"
        android:text="@string/caroline"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar_image" />

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="85dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="#00FFFFFF"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar_image"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/name_text"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star_white_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar_image"
        tools:layout_editor_absoluteX="-16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingBottom="3dp"
                android:text="@string/prenom"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteY="32dp">

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_location"
                    tools:srcCompat="@mipmap/ic_location" />

                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/st_pierre_du_mont_5klm"
                    app:layout_constraintStart_toEndOf="@id/location"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_phone" />

                <TextView
                    android:id="@+id/phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/_33_6_10_20_30_40"
                    app:layout_constraintStart_toEndOf="@id/image2"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_language" />

                <TextView
                    android:id="@+id/website_text"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:text="www.facebook.fr/prenom"
                    app:layout_constraintStart_toEndOf="@id/image3"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingBottom="3dp"
                android:text="A propos de moi"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:paddingRight="35dp"
                android:paddingBottom="8dp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam." />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>